--- a/sound-analize/index.html
+++ b/sound-analize/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>tornado WebSocket example</title>
-  <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+  <title>Show Time</title>
+  <style>
+    body {
+      /* set margin to 0 and overflow to hidden, to
+       use the complete page */
+      margin: 0;
+      overflow: hidden;
+    }
+  </style>
+
+  <script type="text/javascript" src="js/libs/three.js"></script>
+  <script type="text/javascript" src="js/libs/chance.js"></script>
 </head>
 <body>
-  <input type='range' id='slider'></input>
-  <script>
-    var ws = new WebSocket('ws://localhost:8888/ws');
+  <!-- Div which will hold the Output -->
+  <div id="WebGL-output"></div>
 
-    ws.onopen = function(){
-        console.log('opened')
-    };
-    ws.onmessage = function(ev){
-      console.log('value set to: ', ev.data)
-      slider.value = ev.data
-    };
-    ws.onclose = function(ev){
-      console.log('closed')
-    };
-    ws.onerror = function(ev){
-      console.log('error: ', ev)
-    };
-  </script>
+  <!-- Javascript code wit additional libs and controls-->
+  <script type="text/javascript" src="js/controls/TrackballControls.js"></script>
+  <script type="text/javascript" src="js/controls/BinaryLoader.js"></script>
+  <script type="text/javascript" src="js/libs/stats.min.js"></script>
+
+  <!-- Javascript code that runs our custom forms -->
+  <script type="text/javascript" src="js/theme-scene.js"></script>
+
 </body>
 </html>
