--- a/sound-analize/index.html
+++ b/sound-analize/index.html
@@ -24,7 +24,8 @@
   <script type="text/javascript" src="js/libs/stats.min.js"></script>
 
   <!-- Javascript code that runs our custom forms -->
-  <script type="text/javascript" src="js/theme-scene.js"></script>
+  <!--<script type="text/javascript" src="js/theme-scene.js"></script>-->
+  <script type="text/javascript" src="js/basic-equalizer.js"></script>
 
 </body>
 </html>
