Simple, simple nothing yet

--- a/sound-analize/index.html
+++ b/sound-analize/index.html
@@ -22,6 +22,8 @@
   <script type="text/javascript" src="js/controls/TrackballControls.js"></script>
   <script type="text/javascript" src="js/controls/BinaryLoader.js"></script>
   <script type="text/javascript" src="js/libs/stats.min.js"></script>
+  <script type="text/javascript" src="js/renderers/Projector.js"></script>
+  <script type="text/javascript" src="js/renderers/CanvasRenderer.js"></script>
 
   <!-- Javascript code that runs our custom forms -->
   <!--<script type="text/javascript" src="js/theme-scene.js"></script>-->
