--- a/sound-analize/index.html
+++ b/sound-analize/index.html
@@ -13,6 +13,9 @@
 
   <script type="text/javascript" src="js/libs/three.js"></script>
   <script type="text/javascript" src="js/libs/chance.js"></script>
+
+  <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+  <script src="js/libs/jquery.color.js"></script>
 </head>
 <body>
   <!-- Div which will hold the Output -->
