Added frequency for each single cube

--- a/sound-analize/index.html
+++ b/sound-analize/index.html
@@ -29,8 +29,8 @@
   <script type="text/javascript" src="js/renderers/CanvasRenderer.js"></script>
 
   <!-- Javascript code that runs our custom forms -->
-  <!--<script type="text/javascript" src="js/theme-scene.js"></script>-->
-  <script type="text/javascript" src="js/basic-equalizer.js"></script>
+  <script type="text/javascript" src="js/theme-scene.js"></script>
+  <!--<script type="text/javascript" src="js/basic-equalizer.js"></script>-->
 
 </body>
 </html>
