--- a/sound-analize/index.html
+++ b/sound-analize/index.html
@@ -11,6 +11,10 @@
     }
   </style>
 
+  <script>
+    var IPAddress = {{ ip }};
+  </script>
+
   <script type="text/javascript" src="js/libs/three.js"></script>
   <script type="text/javascript" src="js/libs/chance.js"></script>
 
