--- a/sound-analize/index.html
+++ b/sound-analize/index.html
@@ -12,7 +12,7 @@
   </style>
 
   <script>
-    var IPAddress = {{ ip }};
+    var IPAddress = '{{ ip }}';
   </script>
 
   <script type="text/javascript" src="js/libs/three.js"></script>
