--- a/sound-analize/tuner.html
+++ b/sound-analize/tuner.html
@@ -4,6 +4,12 @@
   <title>tornado WebSocket example</title>
   <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
   <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+  <script type="text/javascript" src="/js/vendors/jquery.flot.js"></script>
+  <script type="text/javascript" src="/js/vendors/jquery.flot.spline.js"></script>
+  <style type="text/css">
+  .plot{width: 100%; height: 300px; padding: 0px; position: relative;}
+  </style>
+
 </head>
 <body>
   <input type='range' id='slider'></input>
@@ -15,15 +21,19 @@
         console.log('opened')
     };
     ws.onmessage = function(ev){
+        var data = JSON.parse(ev.data)
+
+
+        slider.value = data.volume
+
+        plot('#fft', data.frequency, 'FFT');
+        plot('#signal', data.signal, 'Signal');
 
 
 
-     ev.data = JSON.parse(ev.data)
+        //console.log('value set to: ', ev.data)
 
-        ev.data.frequency=0
-      console.log('value set to: ', ev.data)
-      slider.value = ev.data.volume
-      note.value = ev.data.note
+        note.value = data.note
     };
     ws.onclose = function(ev){
       console.log('closed')
@@ -32,5 +42,59 @@
       console.log('error: ', ev)
     };
   </script>
+  <script>
+     function build_plot(holder, data){
+        $.plot(holder, data, {
+            grid: {
+              hoverable: true,
+              clickable: true
+            },
+            series: {
+              splines: {
+                show: !0,
+                tension: .4,
+                lineWidth: 2,
+                fill: 0
+              },
+              lines: {
+                show: 0
+              },
+              points: {
+                show: true
+              }
+            },
+            legend: {
+              position: 'nw'
+            }
+          });
+      }
+
+
+      var struct = {};
+      function plot(holder, raw, title){
+          var data = [];
+          for(var i in raw){
+            data.push([i,parseInt(raw[i])]);
+          }
+
+
+
+
+
+
+
+
+
+          var view = [{
+            data: data,
+            label: title
+          }];
+          build_plot(holder, view);
+        }
+  </script>
+  <h2>Signal</h2>
+  <div class="plot" id="signal"></div>
+  <h2>FFT</h2>
+  <div class="plot" id="fft"></div>
 </body>
 </html>
